objects/ScCollection_LogMaster__c.object
<CustomObject>
    <description>this object would contain the master data about logs of the processed</description>
    <fields>
        <fullName>ScCollection_ProcessName__c</fullName>
        <description>this will store the name of the process which called the process</description>
        <label>Process Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_ProcessStatus__c</fullName>
        <description>this would contain the status of the</description>
        <label>Process Status</label>
        <picklist>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ScCollection_Process_Initiated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Initiated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Log_Masters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScCollection_Process_Initiated_Date_Time__c</fullName>
        <label>Process Initiated Date Time</label>
        <type>DateTime</type>
    </fields>
    <label>Log</label>
    <nameField>
        <displayFormat>Log-{00000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>